--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,7 +16,8 @@ pipelining               = false
 host_key_checking        = true
 display_skipped_hosts    = false
 interpreter_python       = auto_silent
-local_tmp                = ~/.ansible/tmp
+# Controller-side temp (must be writable regardless of CWD)
+local_tmp                = /tmp/ansible-tmp
 inject_facts_as_vars     = true
 
 # Vault & auth
@@ -53,4 +54,6 @@ become_ask_pass     = false
 
 [ssh_connection]
 # SSH multiplexing for speed; pairs well with pipelining
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s 
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+# Controller-side ControlMaster socket dir (must be writable regardless of CWD)
+control_path_dir = /tmp/ansible-cp
