Remove SSH host key refresh play

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,7 +13,7 @@ collections_path         = ~/.ansible/collections:/usr/share/ansible/collections
 
 # execution behavior
 pipelining               = false
-host_key_checking        = true
+host_key_checking        = false
 display_skipped_hosts    = false
 interpreter_python       = auto_silent
 # Controller-side temp (must be writable regardless of CWD)
