Remove paperless_stack role and add zulip role for deploying Zulip via Docker
- Deleted the paperless_stack role, including all associated files: LICENSE, README.md, defaults, handlers, meta, tasks, templates, and related configurations.
- Introduced a new zulip role to deploy and manage Zulip using the official Docker stack.
- Added necessary files for the zulip role: LICENSE, README.md, defaults, handlers, meta, tasks, and templates.
- Implemented Docker Compose configurations for Zulip, PostgreSQL, Redis, RabbitMQ, and Memcached.
- Ensured proper handling of secrets and initialization for Zulip deployment.

--- a/roles/zulip/meta/main.yml
+++ b/roles/zulip/meta/main.yml
@@ -1,19 +1,18 @@
 ---
 galaxy_info:
-  role_name: paperless_stack
+  role_name: zulip
   namespace: khaosx
   author: Kris
-  description: Deploy a Paperless-ngx document stack via Docker Compose on Ubuntu.
+  description: Deploy Zulip via official Docker stack with PostgreSQL, Redis, RabbitMQ, and Memcached on Ubuntu.
   license: MIT
   min_ansible_version: "2.15"
   platforms:
     - name: Ubuntu
   galaxy_tags:
-    - paperless
-    - documents
+    - zulip
+    - chat
     - docker
-    - postgres
-    - redis
+    - collaboration
     - ubuntu
 
 dependencies: []
